Change minimum coverage for MIT or GPL-2.0 rule to 60
Without the minimum coverage, the rule falsely matches a package.json from https://github.com/jaredhanson/utils-merge/blob/v1.0.1/package.json
See also https://github.com/nexB/scancode-toolkit/issues/2523

Signed-off-by: Hanna Modica <Hanna.Modica@bosch-si.com>

--- a/src/licensedcode/data/rules/mit_or_gpl-2.0_46.yml
+++ b/src/licensedcode/data/rules/mit_or_gpl-2.0_46.yml
@@ -4,3 +4,4 @@ relevance: 100
 ignorable_urls:
     - http://opensource.org/licenses/MIT
     - http://www.gnu.org/licenses/gpl-2.0.html
+minimum_coverage: 60
