--- a/setup.cfg
+++ b/setup.cfg
@@ -77,7 +77,7 @@ install_requires =
     lxml >= 4.6.3, < 5.0.0
     MarkupSafe >= 0.23
     nltk >= 3.2, !=3.6, < 4.0
-    packageurl_python >= 0.7.0
+    packageurl_python >= 0.9.0
     packaging
     pdfminer.six >= 20170720
     pefile >= 2018.8.8
@@ -87,7 +87,7 @@ install_requires =
     publicsuffix2
     pyahocorasick >= 1.4, < 1.5
     pycryptodome >= 3.4
-    pygments
+    pygments >=2.7.4
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
     saneyaml >= 0.5.2
