--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,11 @@
 aboutcode-toolkit==6.0.0
 apipkg==1.5
-codecov==2.1.11
-coverage==5.3.1
-execnet==1.7.1
+coverage==5.5
+execnet==1.8.1
 iniconfig==1.1.1
 py==1.10.0
-pytest==6.2.1
+pytest==6.2.4
 pytest-cov==2.11.1
 pytest-forked==1.3.0
-pytest-rerunfailures==9.1.1
-pytest-xdist==2.2.0
+pytest-rerunfailures==10.0
+pytest-xdist==2.2.1
