--- a/setup.cfg
+++ b/setup.cfg
@@ -77,7 +77,7 @@ install_requires =
     lxml >= 4.6.3, < 5.0.0
     MarkupSafe >= 1.0
     nltk >= 3.2, !=3.6, < 4.0
-    oelint_parser
+    oelint_parser >= 1.1.0
     packageurl_python >= 0.9.0
     packaging > 20
     pdfminer.six >= 20200101
