Support holder as copyright #216
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/holders/holder_young_c-c.c.yml
+++ b/tests/cluecode/data/holders/holder_young_c-c.c.yml
@@ -3,6 +3,10 @@ what:
   - holders_summary
 holders:
   - Eric Young
+  - Tim Hudson
 holders_summary:
   - value: Eric Young
     count: 1
+  - value: Tim Hudson
+    count: 1
+
