--- a/tests/cluecode/data/copyrights/author_young_c-c.c.yml
+++ b/tests/cluecode/data/copyrights/author_young_c-c.c.yml
@@ -4,8 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1997 Eric Young (eay@mincom.oz.au)
+  - holder is Tim Hudson (tjh@mincom.oz.au)
 holders:
   - Eric Young
+  - Tim Hudson
 holders_summary:
   - value: Eric Young
+    count: 1
+  - value: Tim Hudson
     count: 1
