--- a/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
+++ b/tests/cluecode/data/copyrights/openoffice_org_report_builder_bin.copyright.yml
@@ -90,6 +90,7 @@ copyrights:
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
   - Copyright (c) 2001, 2002, 2003, 2004 Python Software Foundation
   - Copyright (c) 2000 BeOpen.com
   - Copyright (c) 1995-2001 Corporation for National Research Initiatives
@@ -124,6 +125,7 @@ copyrights:
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
   - Copyright (c) 2001, 2002, 2003, 2004 Python Software Foundation
   - Copyright (c) 2000 BeOpen.com
   - Copyright (c) 1995-2001 Corporation for National Research Initiatives
@@ -240,6 +242,7 @@ holders:
   - The OpenSSL Project
   - The OpenSSL Project
   - Eric Young
+  - Tim Hudson
   - Python Software Foundation
   - BeOpen.com
   - Corporation for National Research Initiatives
@@ -274,6 +277,7 @@ holders:
   - The OpenSSL Project
   - The OpenSSL Project
   - Eric Young
+  - Tim Hudson
   - Python Software Foundation
   - BeOpen.com
   - Corporation for National Research Initiatives
@@ -365,6 +369,8 @@ holders_summary:
   - value: Stuart Caie
     count: 2
   - value: The Khronos Group Inc.
+    count: 2
+  - value: Tim Hudson
     count: 2
   - value: Tommi Komulainen
     count: 2
