--- a/tests/cluecode/data/ics/openssl-apps/s_client.c.yml
+++ b/tests/cluecode/data/ics/openssl-apps/s_client.c.yml
@@ -4,10 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
   - Copyright (c) 1998-2006 The OpenSSL Project
   - Copyright 2005 Nokia
 holders:
   - Eric Young
+  - Tim Hudson
   - The OpenSSL Project
   - Nokia
 holders_summary:
@@ -16,4 +18,6 @@ holders_summary:
   - value: Nokia
     count: 1
   - value: The OpenSSL Project
+    count: 1
+  - value: Tim Hudson
     count: 1
