--- a/tests/cluecode/data/ics/openssl-crypto-des/read2pwd.c.yml
+++ b/tests/cluecode/data/ics/openssl-crypto-des/read2pwd.c.yml
@@ -5,11 +5,15 @@ what:
 copyrights:
   - Copyright (c) 2001-2002 The OpenSSL Project
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
 holders:
   - The OpenSSL Project
   - Eric Young
+  - Tim Hudson
 holders_summary:
   - value: Eric Young
     count: 1
   - value: The OpenSSL Project
+    count: 1
+  - value: Tim Hudson
     count: 1
