--- a/tests/cluecode/data/ics/openssl-crypto-pem/pem_all.c.yml
+++ b/tests/cluecode/data/ics/openssl-crypto-pem/pem_all.c.yml
@@ -4,12 +4,16 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
   - Copyright (c) 1998-2002 The OpenSSL Project
 holders:
   - Eric Young
+  - Tim Hudson
   - The OpenSSL Project
 holders_summary:
   - value: Eric Young
     count: 1
   - value: The OpenSSL Project
+    count: 1
+  - value: Tim Hudson
     count: 1
