--- a/tests/cluecode/data/ics/openssl-ssl/ssl_cert.c.yml
+++ b/tests/cluecode/data/ics/openssl-ssl/ssl_cert.c.yml
@@ -4,10 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
   - Copyright (c) 1998-2007 The OpenSSL Project
   - Copyright 2002 Sun Microsystems, Inc.
 holders:
   - Eric Young
+  - Tim Hudson
   - The OpenSSL Project
   - Sun Microsystems, Inc.
 holders_summary:
@@ -16,4 +18,6 @@ holders_summary:
   - value: Sun Microsystems, Inc.
     count: 1
   - value: The OpenSSL Project
+    count: 1
+  - value: Tim Hudson
     count: 1
