--- a/tests/cluecode/data/ics/openssl/e_os.h.yml
+++ b/tests/cluecode/data/ics/openssl/e_os.h.yml
@@ -4,8 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
 holders:
   - Eric Young
+  - Tim Hudson
 holders_summary:
   - value: Eric Young
+    count: 1
+  - value: Tim Hudson
     count: 1
