--- a/src/licensedcode/data/rules/lgpl-2.1-plus_or_apache-2.0_or_commercial-license_1.yml
+++ b/src/licensedcode/data/rules/lgpl-2.1-plus_or_apache-2.0_or_commercial-license_1.yml
@@ -1,3 +1,4 @@
 license_expression: lgpl-2.1-plus OR apache-2.0 OR commercial-license
+is_generic: yes
 is_license_notice: yes
 minimum_coverage: 50
