--- a/src/licensedcode/data/rules/lgpl-2.1-plus_or_commercial-license_1.yml
+++ b/src/licensedcode/data/rules/lgpl-2.1-plus_or_commercial-license_1.yml
@@ -1,4 +1,5 @@
 license_expression: lgpl-2.1-plus OR commercial-license
+is_generic: yes
 is_license_notice: yes
 relevance: 100
 referenced_filenames:
