Replace nltk with pygmars, a simplified subset
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -76,7 +76,6 @@ install_requires =
     license_expression >= 1.0
     lxml >= 4.6.3, < 5.0.0
     MarkupSafe >= 1.0
-    nltk >= 3.2, !=3.6, < 4.0
     packageurl_python >= 0.9.0
     packaging > 20
     pdfminer.six >= 20200101
@@ -86,6 +85,7 @@ install_requires =
     plugincode >= 21.1.21
     publicsuffix2
     pyahocorasick >= 1.4.0, < 1.5
+    pygmars
     pygments
     pymaven_patch >= 0.2.8
     requests >= 2.7.0, < 3.0.0
