Update tests for improved copyright detection #216
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/rules/openssl-ssleay.SPDX.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay.SPDX.yml
@@ -4,8 +4,10 @@ minimum_coverage: 80
 notes: license text as published by SPDX
 ignorable_copyrights:
     - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
