--- a/src/licensedcode/data/rules/openssl-ssleay_3.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay_3.yml
@@ -4,8 +4,10 @@ minimum_coverage: 80
 notes: full openssl/ssleay with extra headers
 ignorable_copyrights:
     - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
