--- a/src/licensedcode/data/rules/openssl-ssleay_31.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay_31.yml
@@ -1,12 +1,14 @@
 license_expression: openssl-ssleay
 is_license_text: yes
-notes: typo in "if the [rouines] from the library" 
+notes: typo in "if the [rouines] from the library"
 ignorable_copyrights:
     - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
     - Copyright (c) 1998-2008 The OpenSSL Project
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
     - The OpenSSL Project
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
