--- a/src/licensedcode/data/rules/openssl-ssleay_36.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay_36.yml
@@ -5,9 +5,11 @@ minimum_coverage: 90
 ignorable_copyrights:
     - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
     - Copyright (c) 1998-2003 The OpenSSL Project
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
     - The OpenSSL Project
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
