--- a/src/licensedcode/data/rules/openssl-ssleay_4.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay_4.yml
@@ -5,9 +5,11 @@ notes: full openssl/ssleay with extra headers
 ignorable_copyrights:
     - Copyright (c) Eric Young (eay@cryptsoft.com)
     - Copyright (c) The OpenSSL Project
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
     - The OpenSSL Project
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
