--- a/src/licensedcode/data/rules/openssl-ssleay_40.yml
+++ b/src/licensedcode/data/rules/openssl-ssleay_40.yml
@@ -4,9 +4,11 @@ relevance: 100
 ignorable_copyrights:
     - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
     - Copyright (c) 1998-2017 The OpenSSL Project
+    - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_holders:
     - Eric Young
     - The OpenSSL Project
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
