--- a/src/licensedcode/data/rules/ssleay-windows_2.yml
+++ b/src/licensedcode/data/rules/ssleay-windows_2.yml
@@ -1,6 +1,10 @@
 license_expression: ssleay-windows
 is_license_text: yes
 notes: Variant of  Original SSLeay License with Windows exception
+ignorable_copyrights:
+    - holder is Tim Hudson (tjh@mincom.oz.au)
+ignorable_holders:
+    - Tim Hudson
 ignorable_authors:
     - Eric Young (eay@mincom.oz.au)
     - Tim Hudson (tjh@mincom.oz.au)
