--- a/src/licensedcode/data/rules/ssleay-windows_4.yml
+++ b/src/licensedcode/data/rules/ssleay-windows_4.yml
@@ -1,6 +1,10 @@
 license_expression: ssleay-windows
 is_license_text: yes
 notes: SSLEAY windows Variant with typos
+ignorable_copyrights:
+    - holder is Tim Hudson (tjh@mincom.oz.au)
+ignorable_holders:
+    - Tim Hudson
 ignorable_authors:
     - Tim Hudson (tjh@mincom.oz.au)
 ignorable_emails:
