--- a/src/licensedcode/data/rules/ssleay_3.yml
+++ b/src/licensedcode/data/rules/ssleay_3.yml
@@ -1,5 +1,9 @@
 license_expression: ssleay
 is_license_text: yes
+ignorable_copyrights:
+    - holder is Tim Hudson (tjh@cryptsoft.com)
+ignorable_holders:
+    - Tim Hudson
 ignorable_emails:
     - eay@cryptsoft.com
     - tjh@cryptsoft.com
