--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-qcom-media.copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/non-free/f/firmware-nonfree/stable_firmware-qcom-media.copyright.expected.yml
@@ -7,6 +7,7 @@
   Copyright (c) 2013-2017 Qualcomm Technologies, Inc.
   Copyright (c) 1998-2011 The OpenSSL Project
   Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  holder is Tim Hudson (tjh@cryptsoft.com)
   Copyright (c) 1995-2005 Jean-loup Gailly
   Copyright (c) 1995-2009 Mark Adler
   Copyright (c) 1995-2003, 2010 Mark Adler
