--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libssl1.1/copyright.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libssl1.1/copyright.expected.yml
@@ -5,3 +5,4 @@
   Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
   Copyright (c) 1998-2004 The OpenSSL Project
   Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  holder is Tim Hudson (tjh@cryptsoft.com)
