--- a/src/licensedcode/data/licenses/ssleay.yml
+++ b/src/licensedcode/data/licenses/ssleay.yml
@@ -9,6 +9,11 @@ text_urls:
     - http://www.openssl.org/source/license.html
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
+ignorable_copyrights:
+  - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_emails:
-    - eay@cryptsoft.com
-    - tjh@cryptsoft.com
+  - eay@cryptsoft.com
+  - tjh@cryptsoft.com
+ignorable_holders:
+  - Tim Hudson
+
