--- a/src/licensedcode/data/licenses/openssl-ssleay.yml
+++ b/src/licensedcode/data/licenses/openssl-ssleay.yml
@@ -13,17 +13,20 @@ text_urls:
     - http://www.openssl.org/source/license.html
 faq_url: http://www.openssl.org/support/faq.html
 minimum_coverage: 70
-ignorable_copyrights:
-    - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
 ignorable_authors:
     - Eric Young (eay@cryptsoft.com)
     - Tim Hudson (tjh@cryptsoft.com)
     - the OpenSSL Project
-ignorable_holders:
-    - Eric Young
-ignorable_urls:
-    - http://www.openssl.org/
+ignorable_copyrights:
+  - Copyright (c) 1995-1998 Eric Young (eay@cryptsoft.com)
+  - holder is Tim Hudson (tjh@cryptsoft.com)
 ignorable_emails:
-    - eay@cryptsoft.com
-    - openssl-core@openssl.org
-    - tjh@cryptsoft.com
+  - eay@cryptsoft.com
+  - openssl-core@openssl.org
+  - tjh@cryptsoft.com
+ignorable_holders:
+  - Eric Young
+  - Tim Hudson
+ignorable_urls:
+  - http://www.openssl.org/
+
