--- a/src/licensedcode/data/rules/public-domain_362.yml
+++ b/src/licensedcode/data/rules/public-domain_362.yml
@@ -1,6 +1,8 @@
 license_expression: public-domain
 is_license_notice: yes
 minimum_coverage: 100
+ignorable_authors:
+    - guido@sienanet.it
 ignorable_emails:
     - guido@sienanet.it
 ignorable_urls:
