--- a/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
+++ b/tests/cluecode/data/copyrights/html_incorrect-detail_9_html.html.yml
@@ -1,7 +1,5 @@
 what:
   - copyrights
 copyrights:
-  - A12 Oe (c) 2004-2009
-expected_failures:
-  - copyrights
-notes: this is a corner and rare case that fails for now.
+  - (c) 2004-2009 http://www.pudn.com/' color red' pudn.com
+notes: this is a corner and rare case that's not perfectfor now.
