--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ normality==2.2.2
 packageurl-python==0.9.4
 packaging==20.9
 patch==1.16
+parameter_expansion==0.2.0
 pdfminer.six==20201018
 pefile==2021.5.24
 pip==21.1.2
