--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -78,6 +78,7 @@ install_requires =
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
     packaging > 20
+    parameter_expansion >= 0.2.0
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
     pkginfo >= 1.7.0
