--- a/tests/licensedcode/data/example_external_licenses/example1/licenses/example1.yml
+++ b/tests/licensedcode/data/example_external_licenses/example1/licenses/example1.yml
@@ -3,3 +3,4 @@ short_name: Example External License 1
 name: Example External License 1
 category: Permissive
 owner: NexB
+spdx_license_key: scancode-example1
