--- a/tests/licensedcode/data/example_external_licenses/example2/licenses/example2.yml
+++ b/tests/licensedcode/data/example_external_licenses/example2/licenses/example2.yml
@@ -3,3 +3,4 @@ short_name: Example External License 2
 name: Example External License 2
 category: Permissive
 owner: NexB
+spdx_license_key: scancode-example2
