--- a/src/licensedcode/data/licenses/app-s2p.yml
+++ b/src/licensedcode/data/licenses/app-s2p.yml
@@ -2,7 +2,8 @@ key: app-s2p
 short_name: App::s2p License
 name: App::s2p License
 category: Permissive
-owner: Unspecified
+owner: Fedora
+homepage_url: https://fedoraproject.org/wiki/Licensing/App-s2p
 spdx_license_key: App-s2p
 other_urls:
     - https://fedoraproject.org/wiki/Licensing/App-s2p
