--- a/src/licensedcode/data/licenses/cc-by-nc-sa-2.0-fr.yml
+++ b/src/licensedcode/data/licenses/cc-by-nc-sa-2.0-fr.yml
@@ -2,7 +2,7 @@ key: cc-by-nc-sa-2.0-fr
 language: fr
 short_name: CC-BY-NC-SA-2.0-FR
 name: Creative Commons Attribution-NonCommercial-ShareAlike 2.0 France
-category: Free Restricted
+category: Source-available
 owner: Creative Commons
 spdx_license_key: CC-BY-NC-SA-2.0-FR
 other_urls:
