--- a/src/licensedcode/data/licenses/cc-gpl-2.0-pt.yml
+++ b/src/licensedcode/data/licenses/cc-gpl-2.0-pt.yml
@@ -2,7 +2,7 @@ key: cc-gpl-2.0-pt
 language: pt
 short_name: CC-GPL-2.0-PT
 name: Creative Commons Licença Pública Geral do GNU (GPL) [General Public License]
-category: Copyleft Limited
+category: Copyleft
 owner: Creative Commons
 homepage_url: https://creativecommons.org/licenses/GPL/2.0/
 spdx_license_key: LicenseRef-scancode-cc-gpl-2.0-pt
