--- a/src/licensedcode/data/licenses/cecill-c-en.yml
+++ b/src/licensedcode/data/licenses/cecill-c-en.yml
@@ -1,7 +1,7 @@
 key: cecill-c-en
 short_name: CeCILL-C License English
 name: CeCILL-C Free Software License Agreement English
-category: Copyleft
+category: Copyleft Limited
 owner: CeCILL
 homepage_url: http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.html
 notes: "This is the English translation of \nhttp://www.cecill.info/licences/Licence_CeCILL-C_V1-fr.html\n"
