--- a/src/licensedcode/data/licenses/schemereport.yml
+++ b/src/licensedcode/data/licenses/schemereport.yml
@@ -2,5 +2,5 @@ key: schemereport
 short_name: Scheme Language Report License
 name: Scheme Language Report License
 category: Permissive
-owner: Unspecified
+owner: ChezScheme
 spdx_license_key: SchemeReport
