--- a/src/licensedcode/data/licenses/scilab-fr.yml
+++ b/src/licensedcode/data/licenses/scilab-fr.yml
@@ -3,7 +3,7 @@ language: fr
 short_name: SCILAB FR
 name: Licence SCILAB
 category: Proprietary Free
-owner: INRIA/ENPC
+owner: Scilab Consortium (Digiteo)
 homepage_url: http://web.archive.org/web/20051212214843/http://www.scilab.org/legal/license.html
 spdx_license_key: LicenseRef-scancode-scilab-fr
 text_urls:
