Improve release scripts #3040
Some release archves where missing critical wheels.
The solution is to:

* ensure that we have effectively missing wheels published and made
available from our PyPI repo when building a release

* Improve the fetch_thirdparty script to fall back on fetching a
source distribution when no wheel is found. Fail loudly if neither a
wheel not an sdist is found. Also accept special cases of packages with
no wheels and packages with no sources.

* Ensure that some source-only packages are always included as sources

* Add release smoke tests and run then for each wheel, sdist and app
  archive on supported OS and Python versions combinations

* Move Linux-only requirements to theur own requirement file.

* Enable Linux-only package inspectors on Linux only.

* Run base tests on macos 12

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -123,6 +123,15 @@ jobs:
           test_suites:
               all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
 
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: macos12_cpython
+          image_name: macos-12
+          python_versions: ['3.7', '3.8', '3.9', '3.10']
+          python_architecture: x64
+          test_suites:
+              all: venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+
     - template: etc/ci/azure-win.yml
       parameters:
           job_name: win2019_cpython_1
@@ -214,6 +223,14 @@ jobs:
       parameters:
           job_name: macos11_cpython_latest_from_pip
           image_name: macos-11
+          python_versions: ['3.7', '3.8', '3.9', '3.10']
+          test_suites:
+              all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
+
+    - template: etc/ci/azure-posix.yml
+      parameters:
+          job_name: macos12_cpython_latest_from_pip
+          image_name: macos-12
           python_versions: ['3.7', '3.8', '3.9', '3.10']
           test_suites:
               all: venv/bin/pip install --upgrade-strategy eager --force-reinstall --upgrade -e .[dev] && venv/bin/pytest -n 2 -vvs tests/scancode/test_cli.py
